--- a/views/pizza.html
+++ b/views/pizza.html
@@ -102,9 +102,9 @@
           </div>
         </div>
         <div id="randomPizzas" class="row">
-          <div id="pizza0" class="randomPizzaContainer">
+          <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <img src="images/pizza-backgroung.png" class="img-responsive">
+              <img src="images/pizza.png" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Udacity Special</h4>
